--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="BlazorCaptureVision.styles.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.42/dist/dbr.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-capture-vision-bundle"></script>
     <script src="jsInterop.js"></script>
 </head>
 
