Add an example for Dynamsoft Document Viewer

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,7 +11,9 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="BlazorCaptureVision.styles.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/dynamsoft-capture-vision-bundle"></script>
-    <script src="jsInterop.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/dynamsoft-document-viewer@latest/dist/ddv.css">
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-document-viewer@latest/dist/ddv.js"></script>
+    <script type="module" src="jsInterop.js"></script>
 </head>
 
 <body>
