Add support for Dynamic Web TWAIN

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/dynamsoft-capture-vision-bundle"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/dynamsoft-document-viewer@latest/dist/ddv.css">
     <script src="https://cdn.jsdelivr.net/npm/dynamsoft-document-viewer@latest/dist/ddv.js"></script>
+    <script src="dist/dynamsoft.webtwain.min.js"></script>
     <script type="module" src="jsInterop.js"></script>
 </head>
 
